packages/uow-core/main/default/objects/UoWParameters__mdt/UoWParameters__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure key-value pair parameters in UoW framework to control systemwide features</description>
    <label>UoW Parameters</label>
    <pluralLabel>UoW Parameters</pluralLabel>
</CustomObject>