packages/uow-core/main/default/objects/UoWParameters__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Data type hint for the parameter value. Used by UoWParameterUtil accessor class for type-safe casting.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>StringList</fullName>
                <label>String List</label>
            </value>
            <value>
                <fullName>IntegerList</fullName>
                <label>Integer List</label>
            </value>
            <value>
                <fullName>Json</fullName>
                <label>JSON</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>