packages/uow-core/main/default/objects/UoWParameters__mdt/listViews/AllParameters.listView-meta.xml
<ListView>
    <fullName>AllParameters</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>Value__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>